--- a/mainsite/static/jpt/css/_misc.scss
+++ b/mainsite/static/jpt/css/_misc.scss
@@ -45,6 +45,14 @@
   font-size:          12px;
   letter-spacing:     2px;
 }
+.onlineonly {
+  h4 {
+    padding:          3px 10px;
+    background-color: $col-rating;
+    color:            $col-white;
+    text-shadow:      0 1px 2px rgba(0,0,0,.6);
+  }
+}
 .cke_maximized {
   margin-top:         50px !important;
 }
