--- a/mainsite/static/www/css/mainstyle.scss
+++ b/mainsite/static/www/css/mainstyle.scss
@@ -68,6 +68,15 @@ a {
   font-size:          12px;
   letter-spacing:     2px;
 }
+.onlineonly {
+  padding:            0;
+  h4 {
+    padding:          3px 10px;
+    background-color: #9fcf67;
+    color:            $col-white;
+    text-shadow:      0 1px 2px rgba(0,0,0,.6);
+  }
+}
 .tile-editorial {
   .row {
     margin:             10px 0;
