--- a/spe_blog/templates/spe_blog/plugins/article_detail.html
+++ b/spe_blog/templates/spe_blog/plugins/article_detail.html
@@ -36,6 +36,11 @@
         {% endif %}
         <h2 class="tiletitles">{{ article.title }}</h2>
     </div>
+    {% if article.onlineonly %}
+    <div class="col-sm-12 onlineonly text-right">
+        <h4><i class="fa fa-podcast" aria-hidden="true"></i> Online Only Content</h4>
+    </div>
+    {% endif %}
     <div class="row">
         <div class="col-sm-12 tiletitlehr"></div>
         <div class="col-xs-7 col-sm-7 col-md-8 articleAuthorBox">
