--- a/spe_blog/templates/spe_blog/plugins/image_left.html
+++ b/spe_blog/templates/spe_blog/plugins/image_left.html
@@ -22,6 +22,11 @@
 {#                {% endif %}#}
                 </span>
                 <h3>{{ article.title }}</h3>
+                {% if article.onlineonly %}
+                <div class="col-sm-12 onlineonly">
+                    <h4><i class="fa fa-podcast" aria-hidden="true"></i> Online Only Content</h4>
+                </div>
+                {% endif %}
                 {% if article.sponsored %}
                 <p><span class="sponsored">SPONSORED</span></p>
                 {% endif %}
