--- a/spe_promotions/templates/spe_promotions/discipline_view.html
+++ b/spe_promotions/templates/spe_promotions/discipline_view.html
@@ -11,6 +11,7 @@
 
             dataTable.addColumn({type: 'string', id: 'Discipline'});
             dataTable.addColumn({type: 'string', id: 'Event Type'});
+            dataTable.addColumn({ type: 'string', role: 'tooltip' });
             dataTable.addColumn({type: 'date', id: 'Start'});
             dataTable.addColumn({type: 'date', id: 'End'});
 
@@ -18,7 +19,7 @@
                 {% for discipline, promos in disciplines.items %}
                     {% for key, values in promos.items %}
                         {% for value in values %}
-                            ['{{ discipline }}', '{{ value.event_type.name }}', new Date({{ value.start.year }}, {{ value.start.month }}, {{ value.start.day }}), new Date({{ value.end.year }}, {{ value.end.month }}, {{ value.end.day }})],
+                            ['{{ discipline }}', '{{ value.event_type.name }}', '{{ value.event }}', new Date({{ value.start.year }}, {{ value.start.month }}, {{ value.start.day }}), new Date({{ value.end.year }}, {{ value.end.month }}, {{ value.end.day }})],
 
                         {% endfor %}
                     {% endfor %}
