--- a/mainsite/templates/include_jpt_header.html
+++ b/mainsite/templates/include_jpt_header.html
@@ -40,7 +40,8 @@
                     </div>
                     <div class="col-md-10 col-lg-8 text-right">
                         <ul class="pubMenu">
-                            {% show_menu 1 100 0 1 %}
+{#                            {% show_menu 1 100 0 1 %}#}
+                            {% show_menu_below_id "jpt-mag" %}
                             <li class="searchIcon"><a role="button" data-toggle="collapse" href="#collapseSearch" aria-expanded="false" aria-controls="collapseExample"><i class="fa fa-search"></i></a></li>
                         </ul>
                     </div>
