JPT Google webfonts

--- a/mainsite/templates/jpt_base.html
+++ b/mainsite/templates/jpt_base.html
@@ -8,6 +8,8 @@
     <script src="https://use.typekit.net/xwk3nys.js"></script>
     <script>try{Typekit.load({ async: true });}catch(e){}</script>
 
+    <meta name="google-site-verification" content="_rLo07QuEyzfLEgT2zhHXQMU1IGHAGNi14-rv779G0k" />
+
 {% endblock web_fonts %}
 
 {% block css_base %}
