move context to middleware
moved processing of variables and visitor to middleware; now just copy
from request object to context for easy usage but no work being done.

--- a/mainsite/templates/include_www_header.html
+++ b/mainsite/templates/include_www_header.html
@@ -363,6 +363,11 @@
                                 <input type="search" name="q" id="gssTextInput" placeholder="Search">
                                 <input type="submit" value="" id="gssSubmitButton">
                             </form>
+                            {% if is_private == True %}
+                            <div id="beta-search">
+                                Testing
+                            </div>
+                            {% endif %}
                         </div>
                     </div>
                 </div>
