--- a/mainsite/templates/include_www_header.html
+++ b/mainsite/templates/include_www_header.html
@@ -363,6 +363,8 @@
                                 <input type="search" name="q" id="gssTextInput" placeholder="Search">
                                 <input type="submit" value="" id="gssSubmitButton">
                             </form>
+                            {{ is_private }}
+                            {{ variables.cip }}
                             {% if is_private == True %}
                             <div id="beta-search">
                                 Testing
