--- a/mainsite/templates/include_www_header.html
+++ b/mainsite/templates/include_www_header.html
@@ -363,9 +363,9 @@
                                 <input type="search" name="q" id="gssTextInput" placeholder="Search">
                                 <input type="submit" value="" id="gssSubmitButton">
                             </form>
-{#                            {{ is_private }}#}
+{#                            {{ variables.is_local_ip }}#}
 {#                            {{ variables.cip }}#}
-                            {% if variables.is_private == True %}
+                            {% if variables.is_local_ip == True %}
                             <div class="betaSearch" style="font-weight:bold;font-size:12px">
                                 <a href="//searchqa.spe.org"><i class="fa fa-caret-square-o-right" aria-hidden="true"></i> Try our Beta Search</a>
                             </div>
