fix professional members to exclude students; fixed spelling error on header menu item

--- a/mainsite/templates/include_www_header.html
+++ b/mainsite/templates/include_www_header.html
@@ -97,7 +97,7 @@
                                     <a href="http://www.spe.org/events/calendar/"><span class="link-icon events-calendar"></span><span class="link-title">Events Calendar</span></a>
                                     <a href="http://www.spe.org/training/courses.php"><span class="link-icon training-courses"></span><span class="link-title">Training Courses</span></a>
                                     <a href="https://webevents.spe.org/"><span class="link-icon web-events"></span><span class="link-title">Webinars</span></a>
-                                    <a href="http://www.spe.org/dl/schedule.php" class="last"><span class="link-icon distinguished-lect"></span><span class="link-title">Distinquished Lecturer</span></a>
+                                    <a href="http://www.spe.org/dl/schedule.php" class="last"><span class="link-icon distinguished-lect"></span><span class="link-title">Distinguished Lecturer</span></a>
                                 </div>
                                 <div class="col-xs-12 visible-xs navcolborder"></div>
                                 <div class="nav-col col-sm-6 col-md-3">
