--- a/spe_promotions/templates/spe_promotions/plugins/image_left.html
+++ b/spe_promotions/templates/spe_promotions/plugins/image_left.html
@@ -19,11 +19,7 @@
                 <p class="sponsored">SPONSORED CONTENT</p>
             {% endif %}
                 <p class="sideListDateTWA">
-                    {% if promo.event_text_date %}
-                        {{ promo.event_text_date }} {{ promo.event_text_after }}
-                    {% else %}
-                        {{ promo.event_start_date|date:"d F Y" }}
-                    {% endif %} - {{ promo.event_location }}</p>
+                    {{ promo.event_text_date }} - {{ promo.event_location }}</p>
                 <p>{{ promo.teaser | safe }}</p>
             </div>
         </div>
