--- a/spe_promotions/templates/spe_promotions/plugins/overlay.html
+++ b/spe_promotions/templates/spe_promotions/plugins/overlay.html
@@ -9,11 +9,7 @@
                 <p class="sponsored">SPONSORED CONTENT</p>
             {% endif %}
                     <p class="sideListDateTWA" style="color:#FDD017">
-                    {% if promo.event_text_date %}
-                        {{ promo.event_text_date }} {{ promo.event_text_after }}
-                    {% else %}
-                        {{ promo.event_start_date|date:"d F Y" }}
-                    {% endif %} - {{ promo.event_location }}</p>
+                        {{ promo.event_text_date }} - {{ promo.event_location }}</p>
                     <p>{{ promo.teaser | safe }}</p>
                 </div>
             </div>
