fixed some display problems when the event_date_text was None with a filter and making sure the location exists before displaying

--- a/spe_promotions/templates/spe_promotions/plugins/overlay.html
+++ b/spe_promotions/templates/spe_promotions/plugins/overlay.html
@@ -9,7 +9,11 @@
                 <p class="sponsored">SPONSORED CONTENT</p>
             {% endif %}
                     <p class="sideListDateTWA" style="color:#FDD017">
-                        {{ promo.event_text_date }} - {{ promo.event_location }}</p>
+                      {{ promo.event_text_date|default:"" }}
+                      {% if promo.event_location %}
+                        - {{ promo.event_location }}
+                      {% endif %}
+                    </p>
                     <p>{{ promo.teaser | safe }}</p>
                 </div>
             </div>
