--- a/spe_promotions/templates/spe_promotions/plugins/carousel.html
+++ b/spe_promotions/templates/spe_promotions/plugins/carousel.html
@@ -30,7 +30,7 @@
                 <p class="sponsored">SPONSORED CONTENT</p>
             {% endif %}
                                 <p class="sideListDateTWA" style="color:#FDD017">
-                                    {{ promo.event_text_date }}
+                                    {{ promo.event_text_date|default:"" }}
                                     {% if promo.event_location %}
                                         - {{ promo.event_location }}
                                     {% endif %}
@@ -49,7 +49,11 @@
                 <p class="sponsored">SPONSORED CONTENT</p>
             {% endif %}
                               <p class="sideListDateTWA" style="color:#FDD017">
-                                {{ promo.event_text_date }} - {{ promo.event_location }}</p>
+                                  {{ promo.event_text_date|default:"" }}
+                                  {% if promo.event_location %}
+                                    - {{ promo.event_location }}
+                                  {% endif %}
+                              </p>
                               <p>{{ promo.teaser | safe }}</p>
                           </div>
                       </a>
