--- a/mainsite/templates/include_www_header.html
+++ b/mainsite/templates/include_www_header.html
@@ -19,7 +19,8 @@
 {#                <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>#}
 {#            </div>#}
     </div>
-    {{ visitor.id|default:"" }}
+{#    {{ visitor.id|default:"" }}#}
+{#    {{ variables.DEBUG }}#}
     <!-- YAMM navbar -->
     <div class="navbar yamm navbar-default row">
       <div class="col-sm-12 col-sm-offset-0">
