--- a/.spe_preferences.backup_70307-0918/templates/spe_preferences/communication.html
+++ b/.spe_preferences.backup_70307-0918/templates/spe_preferences/communication.html
@@ -74,14 +74,15 @@
 
     <div class="well">
         <div id="search_panel">
-        <h2 class="findTitle">Find your account:</h2>
+        <h2 class="findTitle">Help us find your account:</h2>
+        <h4>We want to save your preferences correctly</h4>
 
             <form id=search_form method="POST" class="search-form">{% csrf_token %}
                 {{ search_form.as_p }}
                 <button id="search_button" type="submit" class="save btn btn-default">Search</button>
             </form>
 
-            {% if users_found.count > 0 %}
+            {% if users_found.count > 1 %}
                 <div id="search_results">
                     <h3>...or select from the following:</h3>
                     <ul>
@@ -102,8 +103,9 @@
 
         </div>
 
+
         <div id="prefs_panel">
-        <h2>Other communication preferences, based on your interests:</h2>
+        <h2>My Communication Preferences</h2>
         <form id=prefs_form action="{% url 'add_prefs_insert' %}" method="POST" class="prefs_form">
             {% csrf_token %}
 
@@ -236,13 +238,22 @@ $(function() {
 
     // display the appropriate form content based on whether we have a single match
     var cid = '{{ cid }}';
-//    var no_single_user_match_found_yet = (cid == undefined || cid == '');
-    if ( cid == undefined || cid == '' ) {// we are on step 1
+    var no_single_user_match_found_yet = (cid == undefined || cid == '');
+    var cve_question_not_answered_yet = ( $('#q_cve').val()=='' );
+    var cvp_question_not_answered_yet = ( $('#q_cvp').val()=='' );
+    var jpt_question_not_answered_yet = ( $('#q_sub_jpt').val()=='' );
+    var ogf_question_not_answered_yet = ( $('#q_sub_ogf').val()=='' );
+
+    if ( no_single_user_match_found_yet ) {// we are on step 1
         // enable the user search and hide the preference options
         $('#search_button').attr('disabled', false);
         $('#submit_button').attr('disabled', true);
         $('#search_panel').show();
         $('#prefs_panel').hide();
+    }
+    else if ( cve_question_not_answered_yet || cvp_question_not_answered_yet ) {// we are on the most important overarching questions
+        $('#sssss').show();
+        $('#hhhhh').hide();
     }
     else {// we are on step 2
         // disable the user search and show the preference options
