--- a/mainsite/templates/bootstrap_full_width.html
+++ b/mainsite/templates/bootstrap_full_width.html
@@ -17,30 +17,30 @@
     <div class="container-fluid">
         <div class="row fwheaderrow">
 
-            <div class="col-xs-12">
+{#            <div class="col-xs-12">#}
 
                 {% placeholder "header" %}
 
-            </div>
+{#            </div>#}
 
         </div>
         <div class="row fwcontent">
 
-            <div class="col-xs-12">
+{#            <div class="col-xs-12">#}
 
                 {% placeholder "content" %}
 
-            </div>
+{#            </div>#}
 
         </div>
 
         <div class="row fwfooter">
 
-            <div class="col-xs-12">
+{#            <div class="col-xs-12">#}
 
                 {% placeholder "footer" %}
 
-            </div>
+{#            </div>#}
 
         </div>
 
