SPE Menus Mark 2
Added active URLs to template so the whole application works.

--- a/spe_menus2/templates/spe_menu/menu.html
+++ b/spe_menus2/templates/spe_menu/menu.html
@@ -10,10 +10,10 @@
                 </li>
             {% endif %}
             {% if item.level == 1 or item.level == 3%}
-                <li><a href="#">{{ item.title }}</a></li>
+                <li><a href="{{ item.get_link }}">{{ item.title }}</a></li>
             {% else %}
                 <li class="dropdown">
-                <a class="dropdown-toggle" data-toggle="dropdown" href="#">{{ item.title }}
+                <a class="dropdown-toggle" data-toggle="dropdown" href="{{ item.get_link }}">{{ item.title }}
                     <span class="caret"></span></a>
                     <ul class="dropdown-menu">
             {% endif %}
