--- a/spe_menus/templates/spe_menu/menu.html
+++ b/spe_menus/templates/spe_menu/menu.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">{{ event }}</a>
+      <a class="navbar-brand" href="#">{{ branding }}</a>
     </div>
     <ul class="nav navbar-nav">
         {% for item in items %}
