comitting first pass of changes. deleted my stuff and removed the adminsortable2 from settings and code.

--- a/mainsite/templates/include_www_header.html
+++ b/mainsite/templates/include_www_header.html
@@ -373,7 +373,7 @@
 {#                            {{ variables.cip }}#}
                             {% if variables.is_local_ip == True %}
                             <div class="betaSearch" style="font-weight:bold;font-size:12px">
-                                <a href="//searchqa.spe.org"><i class="fa fa-caret-square-o-right" aria-hidden="true"></i> Try our Beta Search</a>
+                                <a href="https://search.spe.org"><i class="fa fa-caret-square-o-right" aria-hidden="true"></i> Try our Beta Search</a>
                             </div>
                             {% endif %}
                         </div>
