Removed .idea directory; the star in front didn’t catch it.  Also changed menu to remove sustainability and add geologic storage resources for web content

--- a/mainsite/templates/include_www_header.html
+++ b/mainsite/templates/include_www_header.html
@@ -322,8 +322,9 @@
                             <ul>
                                 <li class="heading">INDUSTRY</li>
                                 <li><a href="http://www.spe.org/industry/salary-survey.php">Salary Survey</a></li>
-                                <li><a href="http://www.spe.org/industry/sites/sustainability/">Sustainability</a></li>
+{#                                <li><a href="http://www.spe.org/industry/sites/sustainability/">Sustainability</a></li>#}
                                 <li><a href="http://www.spe.org/industry/reserves.php">Petroleum Reserves Definitions</a></li>
+                                <li><a href="http://www.spe.org/industry/geologic-storage-resources-management-system.php">Geologic Storage Resources</a></li>
                             </ul>
                         </div>
                         <div class="col-xs-12 visible-xs visible-sm navcolborder"></div>
