--- a/spe_preferences/templates/spe_preferences/contact_prefs.html
+++ b/spe_preferences/templates/spe_preferences/contact_prefs.html
@@ -20,7 +20,7 @@
    #
    ##################################################################### */
 
-@import url(http://fonts.googleapis.com/css?family=Roboto);
+@import url('//fonts.googleapis.com/css?family=Roboto');
 
 * {
     font-family: 'Roboto', sans-serif;
